--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap');
 body {
-    font-family: 'Fira Code', sans-serif;
+    font-family: 'Rubik Bubbles';
     background-image: url("img/882548.jpg");
     color: rgb(3, 3, 0);
     text-align: center;
